# queer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Docs/: queer-logo.drawio
Experiments/: .gitignore  CMakeLists.txt
Experiments/001_Constant_Rate_PPP/: .gitignore  CMakeLists.txt  main-001.cpp
Experiments/001_Constant_Rate_PPP/var-epr/: download-artifacts.sh  post.sh  run.sh
Experiments/001_Constant_Rate_PPP/var-epr/graph/: 001-epr-admission-map.plt  001-epr-residual-ratio.plt  admission-2.plt  residual-2.plt
Experiments/001_Constant_Rate_PPP/var-flows/: post.sh  run.sh
Experiments/001_Constant_Rate_PPP/var-flows-multi/: post.sh  run.sh
Experiments/001_Constant_Rate_PPP/var-flows-multi/graph/: 001-dijkstra.plt  001-max-degree.plt  001-multi-admission-rand.plt  001-multi-num-edges.plt  admission-map.plt  admission.plt
Experiments/001_Constant_Rate_PPP/var-flows/graph/: admission-cdf.plt  residual.plt
Experiments/002_Variable_Rate_PPP/: .gitignore  CMakeLists.txt  main-002.cpp
Experiments/002_Variable_Rate_PPP/net-calibration/: post.sh  run.sh
Experiments/002_Variable_Rate_PPP/net-calibration/graph/: 002-nc-diameter.plt  002-nc-max-degree.plt  002-nc-num-edges.plt  002-nc-tot-capacity.plt
Experiments/002_Variable_Rate_PPP/sensitivity/: post.sh  run.sh
Experiments/002_Variable_Rate_PPP/sensitivity/graph/: 002-sens-fidelity-d.plt  002-sens-fidelity-k.plt  002-sens-fidelity-p.plt  002-sens-fidelity-q.plt  002-sens-jain-d.plt  002-sens-jain-k.plt  002-sens-jain-p.plt  002-sens-jain-q.plt  002-sens-jitter-d.plt  002-sens-jitter-k.plt  002-sens-jitter-p.plt  002-sens-jitter-q.plt  002-sens-netrate-d-slides.plt  002-sens-netrate-d.plt  002-sens-netrate-k.plt  002-sens-netrate-p-slides.plt  002-sens-netrate-p.plt  002-sens-netrate-q.plt  002-sens-visits-d.plt  002-sens-visits-k.plt  002-sens-visits-p.plt  002-sens-visits-q.plt  animate.sh  (+12 more)
Experiments/002_Variable_Rate_PPP/target-residual/: post.sh  run.sh
Experiments/003_Constant_Rate_Dyn/: .gitignore  CMakeLists.txt  main-003.cpp
Experiments/003_Constant_Rate_Dyn/garr/: pre.sh
Experiments/003_Constant_Rate_Dyn/var-gen/: post.sh  run.sh
Experiments/003_Constant_Rate_Dyn/var-load/: post.sh  pre.sh  run.sh
Experiments/003_Constant_Rate_Dyn/var-load-calib/: pre.sh  run.sh
Experiments/003_Constant_Rate_Dyn/var-net/: post.sh  run.sh
Experiments/003_Constant_Rate_Dyn/var-net-calib/: run.sh
Experiments/004_Multiple_Classes_PPP/: CMakeLists.txt  main-004.cpp
Experiments/004_Multiple_Classes_PPP/multi-fidelity/: post.sh  run.sh
Experiments/004_Multiple_Classes_PPP/multi-prio/: post.sh  run.sh
Experiments/005_Assignment_PPP/: CMakeLists.txt  README.md  main-005.cpp  mklink.sh
Experiments/005_Assignment_PPP/graph/: 005-mix-fidelity-load-balancing.plt  005-mix-netrate-load-balancing.plt
Experiments/005_Assignment_PPP/var-dcs/: post.sh  run.sh
Experiments/005_Assignment_PPP/var-num-peers/: post.sh  run.sh
Experiments/005_Assignment_PPP/var-users/: run.sh
Experiments/006_EtsiMecQkd_Waxman/: CMakeLists.txt  README.md  appstat.py  main-006.cpp
Experiments/006_EtsiMecQkd_Waxman/cal-load/: run.sh
Experiments/006_EtsiMecQkd_Waxman/cal-topology/: run.sh
Experiments/006_EtsiMecQkd_Waxman/var-alpha/: post.sh  run.sh
Experiments/006_EtsiMecQkd_Waxman/var-apps-load/: post.sh  run.sh
Experiments/006_EtsiMecQkd_Waxman/var-apps-network/: post.sh  run.sh
Experiments/006_EtsiMecQkd_Waxman/var-nodes/: post.sh  run.sh
Experiments/007_EtsiMecQkdOnline_Waxman/: CMakeLists.txt  README.md  appstat.py  main-007.cpp  secret_key_rate_model.plt
Experiments/007_EtsiMecQkdOnline_Waxman/large-network/: post.py  run.sh
Experiments/007_EtsiMecQkdOnline_Waxman/var-apps-load/: post.py  post.sh  run.sh
Experiments/007_EtsiMecQkdOnline_Waxman/var-apps-network/: post.sh  run.sh
Experiments/007_EtsiMecQkdOnline_Waxman/var-nodes-edge/: post.sh  run.sh
Experiments/007_EtsiMecQkdOnline_Waxman/var-nodes-user/: post.sh  run.sh
QuantumRouting/: CMakeLists.txt  capacitynetwork.cpp  capacitynetwork.h  esnetwork.cpp  esnetwork.h  mecqkdnetwork.cpp  mecqkdnetwork.h  mecqkdonlinenetwork.cpp  mecqkdonlinenetwork.h  mecqkdworkload.cpp  mecqkdworkload.h  network.cpp  network.h  networkfactory.cpp  networkfactory.h  peerassignment.cpp  peerassignment.h  poissonpointprocess.cpp  poissonpointprocess.h  qrutils.cpp  qrutils.h  utils.cpp  utils.h
Scripts/: collect.sh  download-artifacts.sh  download-percentile.sh  fidelity_length.py  fidelity_round.plt  jain.py  mklink.sh  save-artifacts.sh
Test/: CMakeLists.txt  testcapacitynetwork.cpp  testesnetwork.cpp  testgraphml.cpp  testmain.cpp  testmecqkdnetwork.cpp  testmecqkdonlinenetwork.cpp  testmecqkdworkload.cpp  testnetwork.cpp  testpeerassignment.cpp  testpoissonpointprocess.cpp  testqrutils.cpp  testutils.cpp  testyen.cpp
Test/Details/: examplenetwork.cpp  examplenetwork.h
jenkins/: .gitignore  cppcheck.sh  run_tests.sh
(+169 files in other folders)
